# demo-python

./: .gitignore  pyproject.toml
cdr/: generate_six_sectors_svg.py
demo_agno/: demo_agent.py
demo_concurrent/: demo_thread_pool.py  demo_tqdm.py  thread_pool.py
demo_crawl4ai/: demo.py  wechat.py
demo_dashscope/: demo_asr.py  demo_llm.py  demo_multi.py  demo_tokenizer.py  demo_vl_plus.py
demo_docling/: __init__.py  excel_parser.py  pdfparse.py
demo_langchain/: __init__.py
demo_langchain/parser/excel/: demo_openpyxl.py  pytablewriter_pandas.py
demo_langchain/parser/ms_office_old/: __init__.py  demo_doc.py
demo_langchain/parser/pdf/: demo_pymupdf.py  textin.py
demo_langchain/parser/url/: __init__.py
demo_langchain/prompt/: p1.md
demo_langchain/splitter/: markdown_spilitter.py
demo_logging/: __init__.py  self_logger.py
demo_markitdown/: demo_doc.py
demo_proxy/: socks5_proxy.py
demo_signal/: blinker_signal.py  system_signal.py
demo_wechat/: access_token.py
py_base/: __init__.py  demo_base64.py  demo_class_variable.py  demo_dict.py  demo_lambda.py  destructuring.py  import_test_a.py  import_test_b.py  inherit_test.py  py_class_test.py  yield_test.py
