[project]
name = "demo-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.0.9",
    "crawl4ai>=0.7.6",
    "dashscope>=1.24.6",
    "docling>=2.55.1",
    "html2text>=2025.4.15",
    "langchain==0.3.25",
    "markitdown[doc,docx,pptx,xls,xlsx]>=0.1.3",
    "openai",
    "pymupdf>=1.26.5",
    "pysocks>=1.7.1",
    "pytablewriter>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
